# RCT2RideGenerator

./: .gitignore  CMakeLists.txt  README.md  animation.c  animation.h  animationdialog.c  animationdialog.h  backend.c  backend.h  dat.c  dat.h  datastructures.c  datastructures.h  image.c  image.h  interface.c  interface.h  linearalgebra.c  linearalgebra.h  main.c  mainwindow.c  mainwindow.h  model.c  model.h  modeldialog.c  modeldialog.h  oldrenderer.c  palette.c  palette.h  project.c  project.h  renderer.c  renderer.h  ride.c  ride.h  ridetypes.c  ridetypes.h  serialization.c  serialization.h  sexpressions.c  (+2 more)
objLoader/: list.c  obj_parser.c  obj_parser.h
src/: animation.c  animation.h  animationdialog.c  animationdialog.h  dat.c  dat.c.orig  dat.h  dat.h.orig  floatparse.c  floatparse.h  image.c  image.h  interface.c  interface.h  linearalgebra.c  linearalgebra.h  main.c  mainwindow.c  mainwindow.h  math_defines.h  model.c  model.h  modeldialog.c  modeldialog.h  palette.c  palette.h  project.c  project.h  renderer.c  renderer.h  ride.c  ride.h  ridetypes.c  ridetypes.h  serialization.c  serialization.h  types.h
src/objLoader/: list.c  list.h  obj_parser.c  obj_parser.h  string_extra.c  string_extra.h
