cmake_minimum_required(VERSION 2.6)
set (PROJECT rct2ridegen)
project(${PROJECT})
INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(GTK REQUIRED gtk+-3.0)
PKG_CHECK_MODULES(JANSSON REQUIRED jansson)
INCLUDE_DIRECTORIES(${GTK_INCLUDE_DIRS} ${JANSSON_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK_LIBRARY_DIRS} ${JANSSON_LIBRARY_DIRS})
file(GLOB_RECURSE SOURCES "src/*.c" "src/*.cpp" "src/*.h" "src/*.hpp")
add_executable(${PROJECT} ${SOURCES})
target_compile_options(${PROJECT} PRIVATE -Wno-deprecated -Wno-deprecated-copy)
set_property(TARGET ${PROJECT} PROPERTY C_STANDARD 99)
TARGET_LINK_LIBRARIES(${PROJECT} ${GTK_LIBRARIES} ${JANSSON_LIBRARIES} m)
